# game

./: .gitignore  README.md  lump_sed.sh  recursive_sed.sh  replace.sh
card/: abst_card.cpp  abst_card.hpp  abst_distance_card.hpp  abst_hazard_card.hpp  abst_remedies_card.hpp  accident.hpp  card.cpp  card.hpp  card_kind.hpp  cards_tuple.hpp  code.hpp  code_gen.sh  distance_card.hpp  end_of_limit.hpp  gen_card.cpp  gen_card.hpp  gen_cards.cpp  hazard_card.hpp  main.py  remedies_card.hpp  repair.hpp  roll.hpp  safeties_card.hpp  speed_limit.hpp  stop.hpp  various_card.hpp
cmake_test/: CMakeLists.txt  main.cpp
driver/: driver.cpp  driver.hpp
player/: exec.hpp  player.hpp
test/: a.out  accident.cpp  card_array.cpp  cards.cpp  enum_int_conv.cpp  make.sh  no_cmake_list.hpp  player.cpp  repair.cpp  right_of_way.cpp  roll.cpp  run.cpp  shared_ptr.cpp  speed_limit.cpp  stop.cpp
